applications/browser/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: browser
  labels:
    name: browser
